# heurohash

./: .clangd  .pre-commit-config.yaml  CMakeLists.txt  README.md  heurohash_hashfunc.hpp  heurohash_map.hpp  heurohash_properties.hpp  main.cpp
benchmarks/: CMakeLists.txt  benchmarks.cpp
heurohash/: linear_map.hpp  ordered_map.hpp
heurohash/detail/: traits.hpp
include/heurohash/: kvp_ptr_iterator.hpp  linear_map.hpp  map_builder.hpp  ordered_map.hpp  ordered_map_iterator.hpp  ordered_map_keyset.hpp  ordered_map_span.hpp  ordered_map_valueset.hpp  pmh_map.hpp  pmh_map_keyset.hpp  pmh_map_span.hpp
include/heurohash/detail/: branchless_lower_bound.hpp  comp_time_arg.hpp  pseudo_pext_lookup.hpp
old/: heurohash_direct.hpp  heurohash_hashfunc.hpp  heurohash_map.hpp  heurohash_properties.hpp  main.cpp  testing.hpp
